testsuite/tests/properties/invalid_new_node/foo.lkt
grammar foo_grammar {
    @main_rule main_rule <- list_rule
    list_rule <- ("(" ASTList[Literal]+(list_item, ",") ")")
    list_item <- Literal(@number)
}
